# SafeSpace_Env

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  LICENSE  MANIFEST.in  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
.github/workflows/: deploy-hf-space.yml
artifacts/baselines/: canonical_gpt-5.4_azure_seed7_manifest_2026-04-03.2.json  canonical_gpt-5.4_azure_seed7_manifest_2026-04-08.1.json  canonical_qwen2.5_72b_hf_seed7_manifest_2026-04-03.2.json
scripts/: check_package_assets.py  generate_scenarios.py  preflight.sh  report_stats.py
server/: Dockerfile  __init__.py  __main__.py  app.py  environment.py  errors.py  grader.py  policy.py  requirements.txt  reward.py  scenarios.py
server/data/: benchmark_manifest.json  scenarios_easy.json  scenarios_hard.json  scenarios_medium.json
tests/: __init__.py  test_app_client.py  test_environment.py  test_inference.py  test_reward.py  test_scenarios.py
